fixing whitespace

--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
+body { 
+  min-height: 100vh; display: flex; flex-direction: column;
+}
+ 
+main {
+  flex-grow: 1;
+} 
+
 .hero-bg{
   background: url(ds-bg.jpg);
   background-size: cover;
   background-position: center top;
   min-height: 60vh;
+  background-repeat: no-repeat;
 }
